# lab2_zuzin_aisd

./: CMakeLists.txt
lab2_zuzin_aisd/: CMakeLists.txt  lab2_zuzin_aisd.cpp  lab2_zuzin_aisd.h
